--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^6.0.1",
     "sass": "^1.85.1"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 1%",
+    "not dead"
+  ]
 }
